// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Exchange > should render empty 1`] = `
<div>
  <div
    class="relative flex flex-col sm:min-h-screen pb-14 sm:pb-0"
    style="min-height: -webkit-fill-available;"
  >
    <div
      class="fixed bottom-0 left-0 z-10 flex w-full flex-col justify-center bg-white dark:bg-black sm:hidden shadow-footer-smooth dark:shadow-footer-smooth-dark"
      data-testid="NavigationBarMobile"
    >
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600"
          data-testid="NavigationBar__buttons__mobile--receive"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="received"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  fill="none"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 21 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.35 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zM16.147 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600"
          data-testid="NavigationBar__buttons__mobile--send"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="sent"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="custom-nav-wrapper sticky inset-x-0 top-0 z-40 bg-white transition-all duration-200 dark:bg-theme-dark-900 h-12 border-b border-b-theme-secondary-300 dark:border-b-theme-dark-700"
    >
      <div
        class="relative flex h-12 flex-row"
      >
        <div
          class="hidden w-9 sm:flex"
        >
          <button
            class="flex w-9 items-center border-b border-b-theme-secondary-300 bg-theme-secondary-100 transition-colors duration-200 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 cursor-not-allowed text-theme-secondary-500 dark:text-theme-secondary-800"
          >
            <div
              class="mx-auto"
            >
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-left-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center justify-between px-6"
        >
          <div
            class="flex flex-row items-center gap-6"
          >
            <div
              class="my-auto flex h-16 items-center sm:h-21"
            >
              <button
                class="my-auto flex cursor-pointer items-center justify-center rounded bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 dark:bg-theme-dark-navy-500 h-6 w-6"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 363 363"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_434_4442)"
                    >
                      <path
                        d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
              </button>
            </div>
            <ul
              class="hidden h-12 items-center xl:flex"
              data-testid="NavigationBar__menu"
            >
              <li
                class="flex"
              >
                <a
                  class="ring-focus relative flex h-fit items-center rounded bg-transparent px-2 py-1 text-sm font-semibold leading-[17px] text-theme-secondary-700 transition-all duration-200 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 focus:outline-none dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50"
                  href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="ring-focus relative flex h-fit items-center rounded bg-transparent px-2 py-1 text-sm font-semibold leading-[17px] text-theme-secondary-700 transition-all duration-200 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 focus:outline-none dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 active"
                  href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="ring-focus relative flex h-fit items-center rounded bg-transparent px-2 py-1 text-sm font-semibold leading-[17px] text-theme-secondary-700 transition-all duration-200 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 focus:outline-none dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50"
                  href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/contacts"
                  title="Contacts"
                >
                  Contacts
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="ring-focus relative flex h-fit items-center rounded bg-transparent px-2 py-1 text-sm font-semibold leading-[17px] text-theme-secondary-700 transition-all duration-200 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 focus:outline-none dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50"
                  href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/votes"
                  title="Votes"
                >
                  Votes
                </a>
              </li>
            </ul>
            <div
              class="mr-auto flex content-center items-center xl:hidden"
              data-testid="NavigationBar__menu-toggle"
            >
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded py-2 text-theme-secondary-700 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 dark:text-theme-dark-200"
                  type="button"
                >
                  <div>
                    <div
                      style="height: 20px; width: 20px;"
                    >
                      <svg
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M1 15.5h18M1 10h18M1 4.5h18"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-row items-center justify-center gap-4 sm:gap-5"
          >
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="custom-button-nav-wrapper group"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    data-testid="NavigationBar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="bell"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <div
                        class="absolute right-0 top-0 flex items-center justify-center rounded-full bg-theme-background p-0.5 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="h-1.5 w-1.5 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:h-12"
            />
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="custom-button-nav-wrapper group"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    data-testid="NavigationBar__buttons--server-status"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.4055 7.25359C12.7875 3.8816 9.75152 1.59001 6.47283 2.0207C3.19415 2.45138 0.803089 5.45586 1.0128 8.88148C1.2225 12.3071 3.96068 14.9728 7.26548 14.9687H15.0878C16.6941 14.9714 18.1382 13.9523 18.7275 12.4002C19.3168 10.8481 18.9312 9.07955 17.7555 7.94265C16.5799 6.80574 14.8539 6.53236 13.4055 7.25359ZM13.4055 7.25359C13.5 7.96875 13.4 8.76875 13 9.96875"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="absolute right-0 top-0 flex items-center justify-center rounded-full p-1 transition-all duration-100 ease-linear"
                      >
                        <div
                          class="h-1.5 w-1.5 rounded-full bg-theme-success-600 dark:bg-theme-success-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="hidden h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:flex sm:h-12"
            />
            <div
              class="hidden items-center sm:flex"
            >
              <div>
                <div
                  class="custom-button-nav-wrapper"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    data-testid="NavigationBar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="received"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="hidden h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:flex sm:h-12"
            />
            <div
              class="hidden items-center sm:flex"
            >
              <div>
                <div
                  class="custom-button-nav-wrapper"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    data-testid="NavigationBar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="sent"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:h-12"
            />
            <div
              class="hidden sm:block"
            >
              <div>
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group"
                  >
                    <button
                      class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none w-auto p-1 text-theme-secondary-700 group-hover:bg-theme-secondary-200 dark:text-theme-secondary-600 dark:group-hover:bg-theme-dark-700"
                      data-testid="NavigationBar__buttons--network"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <span
                          class="rounded-sm border-2 border-theme-warning-300 bg-theme-warning-50 p-[3px] text-theme-warning-600 dark:border-theme-danger-info-border dark:bg-transparent dark:text-theme-danger-info-text"
                        >
                          <div>
                            <div
                              style="height: 14px; width: 14px;"
                            >
                              <svg
                                fill="none"
                                height="14"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 14 14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  id="Frame 9852"
                                >
                                  <path
                                    d="M3 3.36257V1.81641H11.1236V3.36257H7.97656V11.9982H6.14702V3.36257H3Z"
                                    fill="currentColor"
                                    id="T"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                        <span
                          class="text-sm text-theme-secondary-700 group-hover:text-theme-secondary-900 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
                        >
                          Testnet
                        </span>
                        <div
                          class="text-theme-secondary-700 transition-transform group-hover:text-theme-secondary-900 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
                          role="img"
                        >
                          <div
                            style="height: 10px; width: 10px;"
                          >
                            <svg
                              id="chevron-down-small"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="hidden h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:block sm:h-12"
            />
            <div
              class="flex items-center gap-2"
            >
              <div
                class="m-0 items-center gap-2 space-x-0 hidden md-lg:flex"
              >
                <button
                  class="space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none p-0 text-theme-secondary-700 dark:text-theme-dark-200"
                  data-testid="HideBalance-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      data-testid="HideBalance-icon-show"
                    >
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="eye"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                            />
                            <path
                              d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <button
                  class="group flex items-center gap-2 rounded bg-transparent p-0 px-1 py-0.5 hover:bg-theme-secondary-200 dark:hover:bg-theme-dark-700"
                >
                  <div
                    class="hidden text-xs font-semibold leading-[17px] text-theme-secondary-700 group-hover:text-theme-secondary-900 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50 md-lg:flex"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      0 BTC
                    </span>
                  </div>
                  <div
                    class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                    data-testid="UserMenu"
                  >
                    <div
                      class="relative inline-flex items-center justify-center rounded-full align-middle transition-all duration-100 h-6 w-6 text-xs ring-0 ring-theme-background shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="45" cx="80" cy="30" fill="rgb(76, 175, 80)"/><circle r="55" cx="0" cy="60" fill="rgb(255, 152, 0)"/><circle r="40" cx="50" cy="50" fill="rgb(3, 169, 244)"/></svg>"
                        />
                        <span
                          class="absolute text-xs font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="w-full py-4 first:pt-8 last:pb-8"
      >
        <div
          class="mx-auto px-6 lg:container md:px-10"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div
              class="space-y-2"
            >
              <div
                class="flex items-center gap-3"
              >
                <h1
                  class="mb-0 text-2xl leading-[29px]"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
              </div>
              <div
                class="flex items-center leading-5 text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Choose one of the exchange providers below to swap directly from within the wallet.
              </div>
            </div>
          </div>
        </div>
      </div>
      <nav
        class="sticky top-21 z-10 -mt-0 mb-4 bg-theme-secondary-100 dark:bg-black md:mt-4"
      >
        <div
          class="mx-auto flex items-center justify-between px-6 lg:container md:px-10"
        >
          <div
            class="w-full"
          >
            <div
              class="tab-list items-center rounded-xl p-1 bg-transparent flex h-[3.25rem] w-full flex-row gap-6"
            >
              <button
                aria-selected="true"
                class="tab-button rounded px-3 py-1.5 text-base font-semibold leading-5 transition-all md:rounded-lg m-0 mr-6"
                data-ring-focus-margin="-mx-3"
                data-testid="tabs__tab-button-EXCHANGES"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span>
                  Exchanges
                </span>
              </button>
              <button
                aria-selected="false"
                class="tab-button rounded px-3 py-1.5 text-base font-semibold leading-5 transition-all md:rounded-lg m-0"
                data-ring-focus-margin="-mx-3"
                data-testid="tabs__tab-button-TRANSACTIONS"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span>
                  Transactions
                </span>
                <span
                  class="ml-2 rounded bg-theme-primary-100 px-1.5 py-0.5 text-sm font-semibold dark:bg-theme-secondary-900"
                  data-testid="tabs__tab-button-TRANSACTIONS-count"
                >
                  0
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="w-full py-4 first:pt-8 last:pb-8 pt-2"
      >
        <div
          class="mx-auto lg:container md:px-10 px-6 lg:px-10"
        >
          <div
            class="rounded-lg border-solid border-theme-secondary-300 text-center leading-5 text-theme-secondary-text dark:border-theme-secondary-800 sm:border sm:p-6"
            data-testid="ExchangeGrid__empty-message"
          >
            <div>
              There are currently no exchange providers available, please try again at a later time.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange > should render with exchanges 1`] = `
<div>
  <div
    class="relative flex flex-col sm:min-h-screen pb-14 sm:pb-0"
    style="min-height: -webkit-fill-available;"
  >
    <div
      class="fixed bottom-0 left-0 z-10 flex w-full flex-col justify-center bg-white dark:bg-black sm:hidden shadow-footer-smooth dark:shadow-footer-smooth-dark"
      data-testid="NavigationBarMobile"
    >
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600"
          data-testid="NavigationBar__buttons__mobile--receive"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="received"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  fill="none"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 21 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.35 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zM16.147 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600"
          data-testid="NavigationBar__buttons__mobile--send"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="sent"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="custom-nav-wrapper sticky inset-x-0 top-0 z-40 bg-white transition-all duration-200 dark:bg-theme-dark-900 h-12 border-b border-b-theme-secondary-300 dark:border-b-theme-dark-700"
    >
      <div
        class="relative flex h-12 flex-row"
      >
        <div
          class="hidden w-9 sm:flex"
        >
          <button
            class="flex w-9 items-center border-b border-b-theme-secondary-300 bg-theme-secondary-100 transition-colors duration-200 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 cursor-not-allowed text-theme-secondary-500 dark:text-theme-secondary-800"
          >
            <div
              class="mx-auto"
            >
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-left-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center justify-between px-6"
        >
          <div
            class="flex flex-row items-center gap-6"
          >
            <div
              class="my-auto flex h-16 items-center sm:h-21"
            >
              <button
                class="my-auto flex cursor-pointer items-center justify-center rounded bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 dark:bg-theme-dark-navy-500 h-6 w-6"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 363 363"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_434_4442)"
                    >
                      <path
                        d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
              </button>
            </div>
            <ul
              class="hidden h-12 items-center xl:flex"
              data-testid="NavigationBar__menu"
            >
              <li
                class="flex"
              >
                <a
                  class="ring-focus relative flex h-fit items-center rounded bg-transparent px-2 py-1 text-sm font-semibold leading-[17px] text-theme-secondary-700 transition-all duration-200 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 focus:outline-none dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50"
                  href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="ring-focus relative flex h-fit items-center rounded bg-transparent px-2 py-1 text-sm font-semibold leading-[17px] text-theme-secondary-700 transition-all duration-200 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 focus:outline-none dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 active"
                  href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="ring-focus relative flex h-fit items-center rounded bg-transparent px-2 py-1 text-sm font-semibold leading-[17px] text-theme-secondary-700 transition-all duration-200 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 focus:outline-none dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50"
                  href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/contacts"
                  title="Contacts"
                >
                  Contacts
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="ring-focus relative flex h-fit items-center rounded bg-transparent px-2 py-1 text-sm font-semibold leading-[17px] text-theme-secondary-700 transition-all duration-200 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 focus:outline-none dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50"
                  href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/votes"
                  title="Votes"
                >
                  Votes
                </a>
              </li>
            </ul>
            <div
              class="mr-auto flex content-center items-center xl:hidden"
              data-testid="NavigationBar__menu-toggle"
            >
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded py-2 text-theme-secondary-700 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 dark:text-theme-dark-200"
                  type="button"
                >
                  <div>
                    <div
                      style="height: 20px; width: 20px;"
                    >
                      <svg
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M1 15.5h18M1 10h18M1 4.5h18"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-row items-center justify-center gap-4 sm:gap-5"
          >
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="custom-button-nav-wrapper group"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    data-testid="NavigationBar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="bell"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <div
                        class="absolute right-0 top-0 flex items-center justify-center rounded-full bg-theme-background p-0.5 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="h-1.5 w-1.5 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:h-12"
            />
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="custom-button-nav-wrapper group"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    data-testid="NavigationBar__buttons--server-status"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.4055 7.25359C12.7875 3.8816 9.75152 1.59001 6.47283 2.0207C3.19415 2.45138 0.803089 5.45586 1.0128 8.88148C1.2225 12.3071 3.96068 14.9728 7.26548 14.9687H15.0878C16.6941 14.9714 18.1382 13.9523 18.7275 12.4002C19.3168 10.8481 18.9312 9.07955 17.7555 7.94265C16.5799 6.80574 14.8539 6.53236 13.4055 7.25359ZM13.4055 7.25359C13.5 7.96875 13.4 8.76875 13 9.96875"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="absolute right-0 top-0 flex items-center justify-center rounded-full p-1 transition-all duration-100 ease-linear"
                      >
                        <div
                          class="h-1.5 w-1.5 rounded-full bg-theme-success-600 dark:bg-theme-success-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="hidden h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:flex sm:h-12"
            />
            <div
              class="hidden items-center sm:flex"
            >
              <div>
                <div
                  class="custom-button-nav-wrapper"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    data-testid="NavigationBar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="received"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="hidden h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:flex sm:h-12"
            />
            <div
              class="hidden items-center sm:flex"
            >
              <div>
                <div
                  class="custom-button-nav-wrapper"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    data-testid="NavigationBar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="sent"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:h-12"
            />
            <div
              class="hidden sm:block"
            >
              <div>
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group"
                  >
                    <button
                      class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none w-auto p-1 text-theme-secondary-700 group-hover:bg-theme-secondary-200 dark:text-theme-secondary-600 dark:group-hover:bg-theme-dark-700"
                      data-testid="NavigationBar__buttons--network"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <span
                          class="rounded-sm border-2 border-theme-warning-300 bg-theme-warning-50 p-[3px] text-theme-warning-600 dark:border-theme-danger-info-border dark:bg-transparent dark:text-theme-danger-info-text"
                        >
                          <div>
                            <div
                              style="height: 14px; width: 14px;"
                            >
                              <svg
                                fill="none"
                                height="14"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 14 14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  id="Frame 9852"
                                >
                                  <path
                                    d="M3 3.36257V1.81641H11.1236V3.36257H7.97656V11.9982H6.14702V3.36257H3Z"
                                    fill="currentColor"
                                    id="T"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                        <span
                          class="text-sm text-theme-secondary-700 group-hover:text-theme-secondary-900 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
                        >
                          Testnet
                        </span>
                        <div
                          class="text-theme-secondary-700 transition-transform group-hover:text-theme-secondary-900 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
                          role="img"
                        >
                          <div
                            style="height: 10px; width: 10px;"
                          >
                            <svg
                              id="chevron-down-small"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="hidden h-6 border-r border-theme-secondary-300 dark:border-theme-dark-700 sm:block sm:h-12"
            />
            <div
              class="flex items-center gap-2"
            >
              <div
                class="m-0 items-center gap-2 space-x-0 hidden md-lg:flex"
              >
                <button
                  class="space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none p-0 text-theme-secondary-700 dark:text-theme-dark-200"
                  data-testid="HideBalance-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      data-testid="HideBalance-icon-show"
                    >
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="eye"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                            />
                            <path
                              d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <button
                  class="group flex items-center gap-2 rounded bg-transparent p-0 px-1 py-0.5 hover:bg-theme-secondary-200 dark:hover:bg-theme-dark-700"
                >
                  <div
                    class="hidden text-xs font-semibold leading-[17px] text-theme-secondary-700 group-hover:text-theme-secondary-900 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50 md-lg:flex"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      0 BTC
                    </span>
                  </div>
                  <div
                    class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                    data-testid="UserMenu"
                  >
                    <div
                      class="relative inline-flex items-center justify-center rounded-full align-middle transition-all duration-100 h-6 w-6 text-xs ring-0 ring-theme-background shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="45" cx="80" cy="30" fill="rgb(76, 175, 80)"/><circle r="55" cx="0" cy="60" fill="rgb(255, 152, 0)"/><circle r="40" cx="50" cy="50" fill="rgb(3, 169, 244)"/></svg>"
                        />
                        <span
                          class="absolute text-xs font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="w-full py-4 first:pt-8 last:pb-8"
      >
        <div
          class="mx-auto px-6 lg:container md:px-10"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div
              class="space-y-2"
            >
              <div
                class="flex items-center gap-3"
              >
                <h1
                  class="mb-0 text-2xl leading-[29px]"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
              </div>
              <div
                class="flex items-center leading-5 text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Choose one of the exchange providers below to swap directly from within the wallet.
              </div>
            </div>
          </div>
        </div>
      </div>
      <nav
        class="sticky top-21 z-10 -mt-0 mb-4 bg-theme-secondary-100 dark:bg-black md:mt-4"
      >
        <div
          class="mx-auto flex items-center justify-between px-6 lg:container md:px-10"
        >
          <div
            class="w-full"
          >
            <div
              class="tab-list items-center rounded-xl p-1 bg-transparent flex h-[3.25rem] w-full flex-row gap-6"
            >
              <button
                aria-selected="true"
                class="tab-button rounded px-3 py-1.5 text-base font-semibold leading-5 transition-all md:rounded-lg m-0 mr-6"
                data-ring-focus-margin="-mx-3"
                data-testid="tabs__tab-button-EXCHANGES"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span>
                  Exchanges
                </span>
              </button>
              <button
                aria-selected="false"
                class="tab-button rounded px-3 py-1.5 text-base font-semibold leading-5 transition-all md:rounded-lg m-0"
                data-ring-focus-margin="-mx-3"
                data-testid="tabs__tab-button-TRANSACTIONS"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span>
                  Transactions
                </span>
                <span
                  class="ml-2 rounded bg-theme-primary-100 px-1.5 py-0.5 text-sm font-semibold dark:bg-theme-secondary-900"
                  data-testid="tabs__tab-button-TRANSACTIONS-count"
                >
                  0
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="w-full py-4 first:pt-8 last:pb-8 pt-2"
      >
        <div
          class="mx-auto lg:container md:px-10 px-6 lg:px-10"
        >
          <div
            class="grid w-full grid-cols-2 gap-2 sm:grid-cols-4 md:grid-cols-3 md:gap-5 xl:grid-cols-4"
            data-testid="ExchangeGrid"
          >
            <div
              data-testid="ExchangeCard--changenow"
            >
              <div>
                <button
                  class="relative h-full w-full cursor-pointer rounded-lg border-2 border-theme-primary-100 bg-theme-background p-5 text-left outline-none transition-colors-shadow duration-200 focus-visible:border-theme-primary-400 focus-visible:outline-none dark:border-theme-secondary-800"
                  data-testid="Card"
                  type="button"
                >
                  <div
                    class="flex flex-col items-center gap-3 md:flex-row"
                  >
                    <div
                      class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
                    >
                      <img
                        alt="ChangeNOW Logo"
                        class="h-full w-full object-cover"
                        src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
                      />
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <div
                        class="truncate text-sm font-semibold md:text-lg link"
                      >
                        ChangeNOW
                      </div>
                    </div>
                  </div>
                  <div
                    class="absolute -right-1 -top-1 m-4 flex items-center space-x-1"
                  />
                </button>
              </div>
            </div>
            <div
              data-testid="ExchangeCard--changelly"
            >
              <div>
                <button
                  class="relative h-full w-full cursor-pointer rounded-lg border-2 border-theme-primary-100 bg-theme-background p-5 text-left outline-none transition-colors-shadow duration-200 focus-visible:border-theme-primary-400 focus-visible:outline-none dark:border-theme-secondary-800"
                  data-testid="Card"
                  type="button"
                >
                  <div
                    class="flex flex-col items-center gap-3 md:flex-row"
                  >
                    <div
                      class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
                    >
                      <img
                        alt="Changelly Logo"
                        class="h-full w-full object-cover"
                        src="https://exchanges.arkvault.io/images/changelly/thumbnail.png"
                      />
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <div
                        class="truncate text-sm font-semibold md:text-lg link"
                      >
                        Changelly
                      </div>
                    </div>
                  </div>
                  <div
                    class="absolute -right-1 -top-1 m-4 flex items-center space-x-1"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
